added task for generating Scala multi-project